# evologics_ros

./: .gitmodules  CMakeLists.txt  README.md  package.xml
config/: evologics.yaml  evologics_topside.yaml  evologics_vampire.yaml  goby.yaml  goby_vampire.yaml
launch/: alpha_topside.launch  start.launch.py  start_top.launch.py  start_vampire.launch.py
src/: modem.cpp  modem.hpp  node.cpp
