<?xml version="1.0"?>
<package format="3">     <!-- was 2 -->
  <name>mvp_acomms</name>
  <version>0.0.0</version>
  <description>The communication package</description>

  <maintainer email="jason_miller@uri.edu">jason_miller</maintainer>
  <author email="jason_miller@uri.edu">jason_miller</author>

  <license>GPLv3</license>


  <!-- <buildtool_depend>catkin</buildtool_depend>  -->
  <buildtool_depend>ament_cmake</buildtool_depend>  <!-- cnr -->

  <build_depend>rclcpp</build_depend>  <!-- cnr -->
  <!-- <depend>roscpp</depend> -->

  
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>  <!-- maybe? -->
  <!-- <depend>mvp_msgs</depend>    cnr -->
  <!-- <depend>nav_msgs</depend>    cnr -->
  <depend>nav_msgs</depend>
  <depend>message_filters</depend>
  <depend>geometry_msgs</depend>
  <depend>geographic_msgs</depend>
  <depend>robot_localization</depend>
  <depend>serial</depend>
  <depend>proto</depend>
  <depend>goby</depend>
  <depend>dccl</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>acomms_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group> <!-- added cnr -->


  <export>
  <build_type>ament_cmake</build_type>  <!-- cnr -->
  </export>
</package>
