<?xml version="1.0"?>
<package format="3"> 
  <name>evologics_ros</name>
  <version>0.0.0</version>
  <description>The communication package</description>

  <maintainer email="jason_miller@uri.edu">Jason Miller</maintainer>
  <author email="jason_miller@uri.edu">Jason Miller</author>
  <author email="croman2@uri.edu">Chris Roman</author>
  <author email="linzhao@uri.edu">Lin Zhao</author>

  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>  

  <build_depend>rclcpp</build_depend> 
  
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>  
  <depend>geographic_msgs</depend>
  <depend>robot_localization</depend>
  <depend>serial</depend>
  <depend>proto</depend>
  <depend>goby</depend>
  <depend>dccl</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>acomms_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>


  <export>
  <build_type>ament_cmake</build_type>
  </export>
</package>
